[package]
name = "zipper"
version = "0.1.0"
authors = ["Dan (d2718) <dx2718@gmail.com>"]
description = """
Interleave the outputs of multiple commands."""
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/d2718/zipper"
readme = "README.md"


[dependencies]
clap = { version = "4.3.17", features = ["derive", "wrap_help"] }
regex-chunker = { git = "https://github.com/d2718/regex-chunker.git", features = ["async"] }
shlex = "1.1.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "process", "sync"] }
tokio-stream = { version = "0.1.14", default-features = false }